--- a/gb/16/1/13/n4615146.md
+++ b/gb/16/1/13/n4615146.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mozrmf3241/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mozrmf3241/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mozrmf3241/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mozrmf3241/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mozrmf3241/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mozrmf3241/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mozrmf3241/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mozrmf3241/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台土水污染微电影征选  最高奖金30万</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年01月13日讯】（中央社台北13日电）<ahref="https://github.com/mozrmf3241/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E7%BD%B2.md#1">环保署</a>土污基管会表示，即日起<ahref="https://github.com/mozrmf3241/djy/blob/master/gb/tag/%E5%BE%81%E9%80%89.md#1">征选</a>“土水污染追追追”<ahref="https://github.com/mozrmf3241/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a>，祭出高额奖金，包括社会组首奖30万元、大专组首奖12万元，盼有效提升全民对土壤与地下水关注及污染预防意识。</p>
+<p>【大纪元2016年01月13日讯】（中央社台北13日电）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%8E%AF%E4%BF%9D%E7%BD%B2.md#1">环保署</a>土污基管会表示，即日起<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BE%81%E9%80%89.md#1">征选</a>“土水污染追追追”<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a>，祭出高额奖金，包括社会组首奖30万元、大专组首奖12万元，盼有效提升全民对土壤与地下水关注及污染预防意识。</p>
 <p>对于脚底下的土壤和地下水，民众未必意识到士农工商活动皆可能造成影响。</p>
-<p>这次<ahref="https://github.com/mozrmf3241/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a><ahref="https://github.com/mozrmf3241/djy/blob/master/gb/tag/%E5%BE%81%E9%80%89.md#1">征选</a>活动到4月30日止，社会组首奖新台币30万元、大专院校组首奖12万元，个人或团体皆可参赛，总奖金达90万元。另有“网路人气奖”，以网路票选出每组最高票作品三名，可获6000元至1万元。得奖名单7月将公布在活动网页（http://www.egg.com.tw/micromovie/）。</p>
+<p>这次<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BE%81%E9%80%89.md#1">征选</a>活动到4月30日止，社会组首奖新台币30万元、大专院校组首奖12万元，个人或团体皆可参赛，总奖金达90万元。另有“网路人气奖”，以网路票选出每组最高票作品三名，可获6000元至1万元。得奖名单7月将公布在活动网页（http://www.egg.com.tw/micromovie/）。</p>
 <p>土污基管会说明，“土水污染追追追”微电影拍摄作品，只要拍摄元素包含“土水污染预防”或“土壤及地下水环境保护”，并强调主题剧情、具创意及拍摄技巧，就有机会得奖。</p>
 <p>土污基管会补充，希望社会大众与青年学子能发挥创意，透过生动故事情节，让民众认知土壤地下水与生活息息相关，深化民众对土地情感，以推动工厂自主预防污染的观念，传达土壤及地下水环保概念。</p>
 
@@ -15,48 +15,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/6/6/20/n1356985.md#1">台环保署修正土污法 加重行为人责任</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/10/12/21/n3119346.md#1">钢铁业政策环评  纳土水污染</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/12/12/11/n3749898.md#1">管理土地  台环保署订定规范准则</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/15/8/4/n4495464.md#1">土水污调查整治  环署征创新技术</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/16/1/8/n4612164.md#1">土水污染追追追 征微电影祭高额奖金</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/25/n12356266.md#1">中资绕道入台 苏贞昌：严格把关</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/25/n12356204.md#1">护理人员超时工作不能报加班？台大医：再了解</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/25/n12356163.md#1">台美举行高阶视讯会议 讨论扩大台湾国际参与</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/25/n12356201.md#1">嫁祸台湾？ 涉共谍陈惟仁疑转寄不明包裹</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/25/n12356193.md#1">国旅补助经费恐提早用完 台观光局拟3应变方案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/6/6/20/n1356985.md#1">台环保署修正土污法 加重行为人责任</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/12/21/n3119346.md#1">钢铁业政策环评  纳土水污染</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/12/11/n3749898.md#1">管理土地  台环保署订定规范准则</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/8/4/n4495464.md#1">土水污调查整治  环署征创新技术</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/8/n4612164.md#1">土水污染追追追 征微电影祭高额奖金</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689135.md#1">台太鲁阁号事故周年 全毁车厢做惨痛教材</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689077.md#1">全球经济成长放缓 高盛下调台湾IC设计厂获利预测</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689080.md#1">上海全域静态管理 日月光：生产不受影响</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689089.md#1">俄乌战争致金融震荡 台劳动基金收益数负1516.9亿</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689129.md#1">学者者提7项净零碳排建议 吁启动沟通平台</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/1/n9793368.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（上）</a></li><li><a href="https://github.com/mozrmf3241/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/16/11/19/n8507459.md#1">世上多少名利客 怎解捂脸支画工？</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/16/n12334982.md#1">【人间云游】苏东坡梦中启前生  萧瑟处悟真理</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/22/n12350007.md#1">【一线采访视频版】中共生产病毒疫苗？毒疫苗受害者仍在维权</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/24/n12354783.md#1">中医推荐“养脾胃三宝”摆脱疲劳、胃病又降压</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/24/n12354809.md#1">【新闻看点】川普赢得提名 拜登选战二大败笔？</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351666.md#1">传共机空中挑衅蔡英文专机 台空军回应</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12350776.md#1">习近平安徽视察 地方事先策划 媒体被揭造假</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351787.md#1">黄秋生返港大赞台湾 悲叹香港千疮百孔</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351787.md#1">黄秋生返港大赞台湾 悲叹香港千疮百孔</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12350862.md#1">5566港都首唱 王仁甫携女儿亮相大跳BTS舞蹈</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351932.md#1">小童被迫看捧习书籍 杜汶泽嘲讽中共</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12352130.md#1">58岁知名导演陈木胜罹癌离世 香港众星悼念</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/24/n12354392.md#1">范冰冰遭吴秀波起诉 疑涉李晨执导影片分账</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/5/n12308945.md#1">一只吹风机保养全身！这样吹增强免疫力 改善慢性病</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/22/n12350389.md#1">燕麦控三高助减肥 有7大好处 挑对更能稳血糖</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351096.md#1">四川母狗跳入洪水中救回宝宝 感动人心</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/24/n12352785.md#1">万名印度人在台做啥？ 印籍中研院学者揭密</a></li>
-<li><a href="https://github.com/mozrmf3241/djy/blob/master/gb/20/8/23/n12351199.md#1">日本农民在成田机场种菜几十年 就是不搬走</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mozrmf3241/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mozrmf3241/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/1/13/n4615146.htm">台土水污染微电影征选  最高奖金30万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/1/13/n4615146.htm">台土水污染微电影征选  最高奖金30万</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/mozrmf3241/djy/blob/master/gb/16/1/13/n4615146.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mozrmf3241/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mozrmf3241/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mozrmf3241/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mozrmf3241/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mozrmf3241/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/1/13/n4615146.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
